2008-04-26  Dafydd Crosby <dcrosby@userful.com>
        *Added following printers:
	IBM Infoprint 1226tn
	IBM Infoprint 1422
	IBM Infoprint 1532 Express
	IBM Infoprint 1540 MFP
	IBM Infoprint 1560 MFP
	IBM Infoprint 1570 MFP
	IBM Infoprint 1572 MFP
	IBM Infoprint 1580 MFP
	IBM Infoprint 1650 MFP
	IBM Infoprint 1585n
	Lexmark T640
	Lexmark T642
	Lexmark T644
	Lexmark W812
	Lexmark W840
	Lexmark X342n
	Lexmark X560n
	Minolta QMS PagePro 9100N
	
2008-04-26  Dafydd Crosby <dcrosby@userful.com>
        *Added printer XML files:
	26 Lexmark printers, 13 Xerox, 4 Okidata, 2 Tally, 2 Genicom, 2 Xante, 

2008-04-21  Till Kamppeter <till.kamppeter@gmail.com>

	* PPD/Epson/epalc380.ppd, PPD/Epson/epalcx21.ppd,
	  PPD/Epson/epalm200.ppd, PPD/Epson/epalm201.ppd: Added new PPDs
	  from Epson, for Epson AcuLaser C3800N, CX21N, M2000,
	  M2010 (Thanks to Raymond Lee and Ray Hsu from Epson).

2008-04-14  Dafydd Crosby <dcrosby@userful.com>
        * Added autodetection sigs for HP LaserJet 1150 and Color LaserJet
	  3600.
	* Added following printers:
	  Lexmark C510
	  Lexmark C520
	  Lexmark C522
	  Lexmark C524
	  Lexmark C750
          Lexmark C752
          Lexmark C910
          Lexmark C912
	  Lexmark E350d
          Lexmark E352dn
          NOTE - The PPD's do not fully pass cupstestppd, but due to the 
	  restrictive copyright it's prohibited to clean them up.

2008-03-14  George Liu <george.liu@ricoh-tech.com>

        * Added 62 Postscript and 60 pxlmono PPD files for 60 Ricoh Family
	Group printers. 

2008-02-11  Till Kamppeter <till.kamppeter@gmail.com>

	* opt/GS-HalftoningAlgorithm-Gray.xml: Fixed default setting for
	  some drivers (Ubuntu bug LP: #25105).
	
2007-12-31  John Hosszu <john.hosszu@hp.com>

	* printer/: Added
          HP-LaserJet_M2727.xml
          HP-Photosmart_C4380.xml
          HP-OfficeJet_Pro_K8600.xml

	* PPD/: Added
          HP-LaserJet_M2727_MFP.ppd
          HP-LaserJet_9040.ppd

2007-12-17  George Liu <george.liu@ricoh-tech.com>
