@@ -18,9 +18,17 @@
        <url>PPD/Lexmark/PS/Lexmark-E350d_en.PPD</url>
      </postscript>
    <pcl level="6">
-      <!--no pjl-->
+      <pjl/>
       <!--no "text"-->
    </lang>
+   <autodetect>
+      <parallel>
+         <model>Lexmark E350d</model>
+         <manufacturer>Lexmark International</manufacturer>
+         <description>Lexmark E350d</description>
+         <commandset>PCL 6 Emulation, PostScript Level 3 Emulation, NPAP, PJL</commandset>
+      </parallel>
+   </autodetect>
    <functionality>B</functionality>
    <driver>Postscript</driver>
    <comments>
