@@ -20,7 +20,13 @@
     <proprietary/>
   <!--no pjl--><!--No "text"?--></lang>
   <autodetect>
-  <!--no known parport probe information--></autodetect>
+    <usb>
+      <ieee1284>MFG:Samsung;CMD:GDI;MDL:ML-1440;CLS:PRINTER;MODE:GDI;</ieee1284>
+      <manufacturer>Samsung</manufacturer>
+      <model>ML-1440</model>
+      <commandset>GDI</commandset>
+    </usb>
+  </autodetect>
   <functionality>A</functionality>
   <driver>gdi</driver>
   <!--no "contrib_url"-->
