@@ -1,2 +1,2 @@
 This is the PPD to XML converter translator configuration file. Mess with this how you want, but otherwise just let the GUI do its thing.
-FOODIR=/home/dafydd/foomatic-db/db/source
+FOODIR=/usr/share/foomatic/db/source
