@@ -1,3 +1,7 @@
+2008-05-01  Dafydd Crosby <dcrosby@userful.com>
+        *Added detection signatures for Samsung ML-1440 and Lexmark E350d
+	*Fixed comments issue and some autodetection formatting in PPDtoXML
+
 2008-04-26  Dafydd Crosby <dcrosby@userful.com>
         *Added following printers:
 	IBM Infoprint 1226tn
